[OVN] Enable neutron-ovn-tempest-ovs-release job
The previous patch changed DevStack to deploy the OVN driver from the
Neutron repository instead of the networking-ovn one.

This patch is now enabling tempest testing that code in the check and
gate pipeline.

Change-Id: I772c33789443f08e4b70d37602a73d28fdf2f6fb
Signed-off-by: Lucas Alvares Gomes <lucasagomes@gmail.com>

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -45,7 +45,7 @@
             irrelevant-files: *irrelevant-files
         - tempest-slow-py3:
             irrelevant-files: *irrelevant-files
-        #- neutron-ovn-tempest-ovs-release
+        - neutron-ovn-tempest-ovs-release
         - networking-midonet-tempest-aio-ml2-centos-7:
             voting: false
             irrelevant-files: *irrelevant-files
@@ -87,7 +87,7 @@
             irrelevant-files: *irrelevant-files
         - tempest-ipv6-only:
             irrelevant-files: *irrelevant-files
-       #- neutron-ovn-tempest-ovs-release
+        - neutron-ovn-tempest-ovs-release
        #- neutron-ovn-rally-task
        #- neutron-ovn-tripleo-ci-centos-7-containers-multinode
 
