[OVN] Migrate the OVN tools
This patch is migrating the OVN tools and adding its entry points.

Change-Id: Ia1575b2b7fb93b09d8e54f9230ea2f29c1d59c42
Signed-off-by: Lucas Alvares Gomes <lucasagomes@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,8 @@ console_scripts =
     neutron-sanity-check = neutron.cmd.sanity_check:main
     neutron-status = neutron.cmd.status:main
     neutron-ovn-metadata-agent = neutron.cmd.eventlet.agents.ovn_metadata:main
+    neutron-ovn-migration-mtu = neutron.cmd.ovn.migration_mtu:main
+    neutron-ovn-db-sync-util = neutron.cmd.ovn.neutron_ovn_db_sync_util:main
 neutron.core_plugins =
     ml2 = neutron.plugins.ml2.plugin:Ml2Plugin
 neutron.service_plugins =
@@ -94,6 +96,7 @@ neutron.ml2.mechanism_drivers =
     l2population = neutron.plugins.ml2.drivers.l2pop.mech_driver:L2populationMechanismDriver
     sriovnicswitch = neutron.plugins.ml2.drivers.mech_sriov.mech_driver.mech_driver:SriovNicSwitchMechanismDriver
     ovn = neutron.plugins.ml2.drivers.ovn.mech_driver.mech_driver:OVNMechanismDriver
+    ovn-sync = neutron.cmd.ovn.neutron_ovn_db_sync_util:OVNMechanismDriver
     fake_agent = neutron.tests.unit.plugins.ml2.drivers.mech_fake_agent:FakeAgentMechanismDriver
     fake_agent_l3 = neutron.tests.unit.plugins.ml2.drivers.mech_fake_agent:FakeAgentMechanismDriverL3
     another_fake_agent = neutron.tests.unit.plugins.ml2.drivers.mech_fake_agent:AnotherFakeAgentMechanismDriver
