--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,9 @@ data_files =
         etc/api-paste.ini
         etc/rootwrap.conf
     etc/neutron/rootwrap.d = etc/neutron/rootwrap.d/*
+    share/ansible/neutron-ovn-migration/playbooks = tools/ovn_migration/tripleo_environment/playbooks/*
+scripts =
+    tools/ovn_migration/tripleo_environment/ovn_migration.sh
 
 [entry_points]
 wsgi_scripts =
