--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ ovs>=2.8.0 # Apache-2.0
 ovsdbapp>=0.17.0 # Apache-2.0
 psutil>=3.2.2 # BSD
 pyroute2>=0.5.7;sys_platform!='win32' # Apache-2.0 (+ dual licensed GPL2)
+pyOpenSSL>=17.1.0 # Apache-2.0
 
 python-novaclient>=9.1.0 # Apache-2.0
 openstacksdk>=0.31.2 # Apache-2.0
