Add MariaDB 10.3 repository for Ubuntu Bionic
In order to execute the periodic job "neutron-tempest-mariadb-full",
using Ubuntu Bionic and MariaDB, a newer version is needed than the
default package version distributed (10.1).

Devstack gates are tested with MySQL 5.7. Current Neutron DB schema
is not working with the reported version 10.1.

Change-Id: Ie2b5f85a9c0fc26676d44074424cf5a699303805
Related-Bug: #1855912
Related-Bug: #1841907

--- a/zuul.d/tempest-singlenode.yaml
+++ b/zuul.d/tempest-singlenode.yaml
@@ -117,6 +117,9 @@
     vars:
       devstack_localrc:
         MYSQL_SERVICE_NAME: mariadb
+    # NOTE(ralonsoh): once MariaDB default version in Ubuntu is bumped to
+    # >10.1, this workaround can be removed (bug 1855912)
+    pre-run: playbooks/add_mariadb_repo.yaml
     irrelevant-files: *irrelevant-files
 
 - job:
