Remove networking-midonet job from Neutron's check queue
This job can't run on python 3 and it's failing 100% since long time.
There is no point to run it like that now as it's only waste of infra
resources.
We will re-add this job to Neutron's check queue when it will be fixed.

Change-Id: Id5b8fc484112e16c7b627b38af3440f1ce387ffb

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -46,9 +46,11 @@
         - tempest-slow-py3:
             irrelevant-files: *irrelevant-files
         - neutron-ovn-tempest-ovs-release
-        - networking-midonet-tempest-aio-ml2-centos-7:
-            voting: false
-            irrelevant-files: *irrelevant-files
+        # TODO(slaweq): add this job again to the check queue when it will be
+        # working fine on python 3
+        #- networking-midonet-tempest-aio-ml2-centos-7:
+        #    voting: false
+        #    irrelevant-files: *irrelevant-files
         - tempest-ipv6-only:
             irrelevant-files: *irrelevant-files
         - openstacksdk-functional-devstack-networking:
