Remove TripleO job from Neutron's check queue
This job can't run on python 3 and it's failing 100% since long time.
There is no point to run it like that now as it's only waste of infra
resources.
We will re-add this job to Neutron's check queue when it will be fixed.

Change-Id: I7833295398686aca3c37859dbe4c1c9d2aca1c55

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -59,7 +59,9 @@
             voting: false
         - neutron-tempest-with-uwsgi:
             voting: false
-        - neutron-centos-7-tripleo-standalone
+        # TODO(slaweq): add this job again to the check queue when it will
+        # be working fine with python 3
+        #- neutron-centos-7-tripleo-standalone
        #- neutron-ovn-rally-task
         # TripleO jobs that deploy OVN.
         # Note we don't use a project-template here, so it's easier
