--- a/etc/neutron/rootwrap.d/l3.filters
+++ b/etc/neutron/rootwrap.d/l3.filters
@@ -69,9 +69,9 @@ keepalived_state_change: CommandFilter, neutron-keepalived-state-change, root
 # command of the process to be killed is python.
 # TODO(mlavalle) These kill filters will be updated once we come up with a
 # mechanism to kill using the name of the script being executed by Python
-kill_keepalived_monitor_py: KillFilter, root, python, -15
-kill_keepalived_monitor_py27: KillFilter, root, python2.7, -15
-kill_keepalived_monitor_py3: KillFilter, root, python3, -15
-kill_keepalived_monitor_py35: KillFilter, root, python3.5, -15
-kill_keepalived_monitor_py36: KillFilter, root, python3.6, -15
-kill_keepalived_monitor_py37: KillFilter, root, python3.7, -15
+kill_keepalived_monitor_py: KillFilter, root, python, -15, -9
+kill_keepalived_monitor_py27: KillFilter, root, python2.7, -15, -9
+kill_keepalived_monitor_py3: KillFilter, root, python3, -15, -9
+kill_keepalived_monitor_py35: KillFilter, root, python3.5, -15, -9
+kill_keepalived_monitor_py36: KillFilter, root, python3.6, -15, -9
+kill_keepalived_monitor_py37: KillFilter, root, python3.7, -15, -9
