--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -81,6 +81,8 @@
             timeout: 3600
         - openstack-tox-py37:  # from openstack-python3-ussuri-jobs template
             timeout: 3600
+        - openstack-tox-py38:  # from openstack-python3-ussuri-jobs template
+            timeout: 3600
         - openstack-tox-lower-constraints:  # from openstack-tox-lower-constraints template
             timeout: 3600
     gate:
