[OVN] Enable qos service plugin in tempest jobs
This patch adds QoS service plugin and enable QoS
tests whiel using OVN as a backend.

Note that:
* We need to compile OVS kernel module, in order to support
  OpenFlow Meter action in Ubuntu [1]
* Because of bug [2] for now we need also to create the integration
  bridge with specified OpenFlow version 1.3.
* Added qos extension to the list of neutron extensions in tempest
  config file to be able to run qos related tests.

[1] https://mail.openvswitch.org/pipermail/ovs-discuss/2018-December/048009.html
[2] https://bugzilla.redhat.com/show_bug.cgi?id=1782834

Co-Authored-By: Slawek Kaplonski <skaplons@redhat.com>

Change-Id: I175511acef0e661bd1f282f37b1e528959c118a5

--- a/zuul.d/tempest-singlenode.yaml
+++ b/zuul.d/tempest-singlenode.yaml
@@ -199,6 +199,10 @@
         ENABLE_CHASSIS_AS_GW: true
         OVN_L3_CREATE_PUBLIC_NETWORK: true
         OVN_DBS_LOG_LEVEL: dbg
+        # TODO(mjozefcz): Stop compiling OVS modules when meter action in kernel
+        # will be released in Ubuntu Bionic.
+        # More info: https://mail.openvswitch.org/pipermail/ovs-discuss/2018-December/048009.html
+        OVN_BUILD_MODULES: True
         USE_PYTHON3: True
         DOWNLOAD_DEFAULT_IMAGES: false
         IMAGE_URLS: "http://download.cirros-cloud.net/0.4.0/cirros-0.4.0-x86_64-disk.img,https://cloud-images.ubuntu.com/releases/xenial/release/ubuntu-16.04-server-cloudimg-amd64-disk1.img"
@@ -260,6 +264,7 @@
         s-object: false
         s-proxy: false
         tls-proxy: true
+        q-qos: true
 
 - job:
     name: neutron-ovn-tempest-ovs-master
