--- a/zuul.d/tempest-multinode.yaml
+++ b/zuul.d/tempest-multinode.yaml
@@ -109,6 +109,10 @@
         ENABLE_CHASSIS_AS_GW: true
         OVN_L3_CREATE_PUBLIC_NETWORK: true
         OVN_DBS_LOG_LEVEL: dbg
+        # TODO(mjozefcz): Stop compiling OVS modules when meter action in kernel
+        # will be released in Ubuntu Bionic.
+        # More info: https://mail.openvswitch.org/pipermail/ovs-discuss/2018-December/048009.html
+        OVN_BUILD_MODULES: True
         DOWNLOAD_DEFAULT_IMAGES: false
         IMAGE_URLS: "http://download.cirros-cloud.net/0.4.0/cirros-0.4.0-x86_64-disk.img,https://cloud-images.ubuntu.com/releases/xenial/release/ubuntu-16.04-server-cloudimg-amd64-disk1.img"
         DEFAULT_IMAGE_NAME: cirros-0.4.0-x86_64-disk
@@ -154,6 +158,7 @@
         s-object: false
         s-proxy: false
         tls-proxy: true
+        q-qos: true
     group-vars:
       subnode:
         devstack_services:
@@ -183,6 +188,10 @@
           OVN_DBS_LOG_LEVEL: dbg
           USE_PYTHON3: True
           ENABLE_TLS: True
+          # TODO(mjozefcz): Stop compiling OVS modules when meter action in kernel
+          # will be released in Ubuntu Bionic.
+          # More info: https://mail.openvswitch.org/pipermail/ovs-discuss/2018-December/048009.html
+          OVN_BUILD_MODULES: True
 
 
 - job:
