--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -83,6 +83,8 @@
             timeout: 3600
         - openstack-tox-lower-constraints:  # from openstack-tox-lower-constraints template
             timeout: 3600
+        - openstack-tox-cover:  # from openstack-cover-jobs template
+            timeout: 4800
     gate:
       jobs:
         - neutron-functional
