--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -35,6 +35,7 @@
               - ^tox.ini$
               - ^vagrant/.*$
               - ^migration/.*$
+              - ^devstack/.*\.sample$
         - tempest-multinode-full-py3:
             voting: false
             irrelevant-files: *irrelevant-files
