--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -45,7 +45,9 @@
             irrelevant-files: *irrelevant-files
         - tempest-slow-py3:
             irrelevant-files: *irrelevant-files
-        - neutron-ovn-tempest-ovs-release
+        - neutron-ovn-tempest-ovs-release:
+            # NOTE(ralonsoh): disabled temporarily until LP 1861876 is solved
+            voting: false
         - neutron-ovn-tempest-ovs-release-ipv6-only:
             voting: false
         # TODO(slaweq): add this job again to the check queue when it will be
@@ -101,7 +103,8 @@
             irrelevant-files: *irrelevant-files
         - tempest-ipv6-only:
             irrelevant-files: *irrelevant-files
-        - neutron-ovn-tempest-ovs-release
+        # NOTE(ralonsoh): disabled temporarily until LP 1861876 is solved
+        #- neutron-ovn-tempest-ovs-release:
         - openstack-tox-py36:  # from openstack-python3-ussuri-jobs template
             timeout: 3600
         - openstack-tox-py37:  # from openstack-python3-ussuri-jobs template
