Rename devstack service neutron-ovn-metadata-agent
... to q-ovn-metadata-agent.

To the best of my understanding we decided to keep using the
neutron-legacy devstack module since it is the one used in the gate:

http://lists.openstack.org/pipermail/openstack-discuss/2019-December/thread.html#11544

And we merge new features like the ovn migration only working with
neutron-legacy:

https://review.opendev.org/696592

It seems to me we were a bit inconsistent in naming devstack service
'neutron-ovn-metadata-agent' since legacy style devstack service
names start with 'q-'.

For example this sample config is broken:

https://opendev.org/openstack/neutron/src/branch/master/devstack/ovn-compute-local.conf.sample#L31-L35

stack.sh dies with:

lib/neutron: line 368: neutron_plugin_create_nova_conf: command not found

Because not having a single 'q-' service in that enabled service list
we trip up devstack's 'is_neutron_legacy_enabled' check:

https://opendev.org/openstack/devstack/src/commit/e51cbf0ea9469e193473972fa5dd5b0de72d9a0e/lib/neutron#L127-L135

This change renames devstack service neutron-ovn-metadata-agent
to q-ovn-metadata-agent.

I'm not proud to propose this change in 2020 (circa 5 years after
the rename from Quantum to Neutron) so let me know if you see a better
way. :-)

Change-Id: I507a3426e2b63bff49891bd5a51fa9d9999a0ffa

--- a/devstack/ovn-compute-local.conf.sample
+++ b/devstack/ovn-compute-local.conf.sample
@@ -38,7 +38,7 @@ disable_all_services
 enable_service n-cpu
 enable_service placement-client
 enable_service ovn-controller
-enable_service neutron-ovn-metadata-agent
+enable_service q-ovn-metadata-agent
 
 # Set this to the address of the main DevStack host running the rest of the
 # OpenStack services.
