Enable neutron-ovn jobs in check queue
Jobs:
* neutron-ovn-tripleo-ci-centos-7-containers-multinode
* neutron-ovn-rally

were disabled during the process of migration of networking-ovn code
to the neutron repo.
Now those jobs should runs fine so lets enable them as non-voting
jobs first.

Additionally job "neutron-ovn-tripleo-ci-centos-7-containers-multinode"
was in the meantime renamed to be the
"neutron-ovn-tripleo-ci-centos-8-containers-multinode" as it runs on
CentOS 8 now.

Change-Id: I90e038767101e12ba94cdc7ed7431bc3e34b8044

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -64,7 +64,8 @@
         - neutron-tempest-with-uwsgi:
             voting: false
         - neutron-centos-8-tripleo-standalone
-       #- neutron-ovn-rally-task
+        - neutron-ovn-rally-task:
+            voting: false
         # TripleO jobs that deploy OVN.
         # Note we don't use a project-template here, so it's easier
         # to disable voting on one specific job if things go wrong.
@@ -72,7 +73,8 @@
         # networking-ovn-tripleo-ci-centos-7-containers-multinode.
         # If you need any support to debug these jobs in case of
         # failures, please reach us on #tripleo IRC channel.
-       #- neutron-ovn-tripleo-ci-centos-8-containers-multinode
+        - neutron-ovn-tripleo-ci-centos-8-containers-multinode:
+            voting: false
         - neutron-ovn-tempest-slow:
             voting: false
         - neutron-ovn-tempest-full-multinode-ovs-master:
