--- a/zuul.d/tempest-singlenode.yaml
+++ b/zuul.d/tempest-singlenode.yaml
@@ -286,6 +286,7 @@
     vars:
       devstack_localrc:
         OVN_BRANCH: branch-2.12
+        OVS_BRANCH: branch-2.12
 
 - job:
     name: neutron-ovn-tempest-ovs-release
@@ -294,6 +295,7 @@
     vars:
       devstack_localrc:
         OVN_BRANCH: branch-2.12
+        OVS_BRANCH: branch-2.12
 
 - job:
     name: neutron-ovn-tempest-ovs-master-fedora
