Run fullstack security group test always serially
Security groups are based on iptables in many cases and can interfere
between other tests. So it means that if some other test will manipulate
with iptables on host during SG related test is run, this SG related
test may fail without any obvious reason.
So lets try to run those test serially to be sure that no other agents
will manipulate iptables/openflow rules in same time.

Change-Id: I4d19f2a457e004306fdf40980a943073f1b8704a
Closes-Bug: #1779328

--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,15 @@ commands =
   {toxinidir}/tools/deploy_rootwrap.sh {toxinidir} {envdir}/etc {envdir}/bin
   stestr run --concurrency 4 {posargs}
 
+[testenv:dsvm-fullstack-gate]
+setenv = {[testenv:dsvm-fullstack]setenv}
+deps = {[testenv:dsvm-fullstack]deps}
+commands =
+  {toxinidir}/tools/generate_dhclient_script_for_fullstack.sh {envdir}
+  {toxinidir}/tools/deploy_rootwrap.sh {toxinidir} {envdir}/etc {envdir}/bin
+  stestr run --concurrency 4 --black-regex neutron.tests.fullstack.test_securitygroup.TestSecurityGroupsSameNetwork.test_securitygroup {posargs}
+  stestr run --combine --concurrency 1 neutron.tests.fullstack.test_securitygroup.TestSecurityGroupsSameNetwork.test_securitygroup {posargs}
+
 [testenv:releasenotes]
 envdir = {toxworkdir}/docs
 deps = -r{toxinidir}/doc/requirements.txt
