Use rally-openstack 1.7.0 for stable/stein
Master branch now has requirements incompatible with stable branches
constraints [0], so this switches to last tag compatible.

Longer term fix will be to run rally in a virtualenv, but this is lower
priority than other tasks. This can be revisited at the time, though for
older branches we will probably stick with pinned version

[0] https://opendev.org/openstack/rally-openstack/commit/5776e015f16321fdb489ebb482d984ccd3cd2903

Change-Id: Iad7434f6d75e067feba31882a6417368b1915294
Closes-Bug: #1868691

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -167,7 +167,8 @@
         neutron-trunk: true
       rally_task: rally-jobs/task-neutron.yaml
     required-projects:
-      - openstack/rally-openstack
+      - name: openstack/rally-openstack
+        override-checkout: 1.7.0
     irrelevant-files:
       - ^.*\.rst$
       - ^doc/.*$
