Update OVN local.conf sample file
ovn-local.conf.sample had a "disable_service n-net" in it
that has no effect since devstack dropped it last year.

Trivialfix

Change-Id: I69ba4be4a84720847e38169d2f49145effb3cb98

--- a/devstack/ovn-local.conf.sample
+++ b/devstack/ovn-local.conf.sample
@@ -34,8 +34,7 @@ enable_service ovn-northd
 enable_service ovn-controller
 enable_service q-ovn-metadata-agent
 
-# Use Neutron instead of nova-network
-disable_service n-net
+# Use Neutron
 enable_service q-svc
 
 # Disable Neutron agents not used with OVN.
