--- a/requirements.txt
+++ b/requirements.txt
@@ -58,3 +58,4 @@ os-xenapi>=0.3.1 # Apache-2.0
 os-vif>=1.15.1 # Apache-2.0
 futurist>=1.2.0 # Apache-2.0
 tooz>=1.58.0 # Apache-2.0
+wmi>=1.4.9;sys_platform=='win32'  # MIT
