Add rootwrap filter rule for radvd-kill script
In patch [1] support for custom kill scripts was added.
We also added rootwrap filter rules for such scripts to
kill dnsmasq, haproxy, dibbler and keepalived processes.
But we missed to add rule for radvd-kill so this patch
adds it (better late than never ;))

[1] https://review.opendev.org/#/c/661760/

Closes-Bug: #1873240

Change-Id: I8fa7176d1d9667c6b5cc95af0e31210d0f1c3662
(cherry picked from commit 2273499155a8cd83150aa4b4f8ba08ecbbdc9306)

--- a/etc/neutron/rootwrap.d/l3.filters
+++ b/etc/neutron/rootwrap.d/l3.filters
@@ -24,6 +24,7 @@ kill_haproxy_script: CommandFilter, haproxy-kill, root
 
 kill_radvd_usr: KillFilter, root, /usr/sbin/radvd, -15, -9, -HUP
 kill_radvd: KillFilter, root, /sbin/radvd, -15, -9, -HUP
+kill_radvd_script: CommandFilter, radvd-kill, root
 
 # ip_lib
 ip: IpFilter, ip, root
