--- a/zuul.d/tempest-multinode.yaml
+++ b/zuul.d/tempest-multinode.yaml
@@ -100,6 +100,11 @@
       - zuul: openstack/neutron-tempest-plugin
     pre-run: playbooks/multinode-setup.yaml
     vars:
+      devstack_local_conf:
+        test-config:
+          $TEMPEST_CONFIG:
+            neutron_plugin_options:
+              is_igmp_snooping_enabled: True
       devstack_localrc:
         Q_AGENT: ovn
         Q_ML2_PLUGIN_MECHANISM_DRIVERS: ovn,logger
@@ -118,6 +123,7 @@
         ADVANCED_INSTANCE_USER: ubuntu
         BUILD_TIMEOUT: 784
         ENABLE_TLS: True
+        OVN_IGMP_SNOOPING_ENABLE: True
       devstack_plugins:
         neutron: https://opendev.org/openstack/neutron
         neutron-tempest-plugin: https://opendev.org/openstack/neutron-tempest-plugin
