--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -18,10 +18,8 @@
         - neutron-fullstack
         - neutron-fullstack-with-uwsgi
         - neutron-rally-task
-        # TODO(bcafarel): temporarily disable these jobs so we can get multiple
-        # gate fixes properly backported
-        #- neutron-grenade-multinode
-        #- neutron-grenade-dvr-multinode
+        - neutron-grenade-multinode
+        - neutron-grenade-dvr-multinode
         - neutron-tempest-linuxbridge
         - neutron-tempest-with-uwsgi
         - tempest-integrated-networking:
@@ -96,10 +94,8 @@
         - tempest-integrated-networking
         - neutron-tempest-linuxbridge
         - neutron-tempest-iptables_hybrid
-        # TODO(bcafarel): temporarily disable these jobs so we can get multiple
-        # gate fixes properly backported
-        #- neutron-grenade-multinode
-        #- neutron-grenade-dvr-multinode
+        - neutron-grenade-multinode
+        - neutron-grenade-dvr-multinode
         - tempest-slow-py3:
             irrelevant-files: *irrelevant-files
         - tempest-ipv6-only:
