ovn-migration: Stop ml2/ovs agents before installing OVN resources
TripleO used to uninstall services if the resources were set to None. It
was not intentional and TripleO no longer does that. This patch manually
removes dhcp, l3, metadata and ovs agents from controller and compute
nodes, including its systemd service files.

Closes-Bug: #1878358
Change-Id: I140ae0c476bf9e19b4429ce388ddc7cc3f4cd421
Signed-off-by: Jakub Libosvar <libosvar@redhat.com>

--- a/tools/ovn_migration/tripleo_environment/playbooks/ovn-migration.yml
+++ b/tools/ovn_migration/tripleo_environment/playbooks/ovn-migration.yml
@@ -25,6 +25,14 @@
   tags:
     - setup
 
+
+- name: Stop ml2/ovs resources
+  hosts: ovn-controllers
+  roles:
+    - stop-agents
+  tags:
+    - migration
+
 #
 # TripleO / Director is executed to deploy ovn using "br-migration" for the
 # dataplane, while br-int is left intact to avoid dataplane disruption.
