Update OVN local.conf example files
Add stable/ussuri to enable_plugin so correct branch is checked-out.

Change-Id: I61583347df839be74e962437c86aa4b6afe9b14b

--- a/devstack/ovn-compute-local.conf.sample
+++ b/devstack/ovn-compute-local.conf.sample
@@ -32,7 +32,7 @@ LOGFILE=$DEST/logs/stack.sh.log
 #OVN_REPO=https://github.com/blp/ovs-reviews.git
 #OVN_BRANCH=ovn
 
-enable_plugin neutron https://opendev.org/openstack/neutron
+enable_plugin neutron https://opendev.org/openstack/neutron stable/ussuri
 
 disable_all_services
 enable_service n-cpu
