Promote functional uwsgi job to be voting
This job is pretty stable since some time so we can make it
to be voting now.

Change-Id: Id765acc227e5bead2a9b41e8986e9da5cb387b9f

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -15,6 +15,7 @@
     check:
       jobs:
         - neutron-functional
+        - neutron-functional-with-uwsgi
         - neutron-fullstack
         - neutron-fullstack-with-uwsgi
         - neutron-rally-task
@@ -58,8 +59,6 @@
         #    voting: false
         #    irrelevant-files: *irrelevant-files
         - openstacksdk-functional-devstack-networking:
-            voting: false
-        - neutron-functional-with-uwsgi:
             voting: false
         - neutron-centos-8-tripleo-standalone
         - neutron-ovn-rally-task:
