--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,8 +1,8 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
-sphinx!=1.6.6,!=1.6.7,!=2.1.0,>=1.6.2;python_version>='3.4' # BSD
+sphinx>=2.0.0,!=2.1.0 # BSD
 sphinx_feature_classification>=1.0.0 # Apache-2.0
-openstackdocstheme>=1.30.0 # Apache-2.0
+openstackdocstheme>=2.2.1 # Apache-2.0
 oslotest>=3.2.0 # Apache-2.0
-reno>=2.5.0 # Apache-2.0
+reno>=3.1.0 # Apache-2.0
