ovn: Enable debugging services on subnodes
Running tcpdump and dump-flows provides great value when troubleshooting
gate issues. So far the services were run on master nodes only but
instances are spawned on subnodes therefore the services are useful also
there. This patch enables it as such.

Change-Id: I378e0296a84c1bdbb42277f8916df866358f5b50

--- a/zuul.d/tempest-multinode.yaml
+++ b/zuul.d/tempest-multinode.yaml
@@ -168,6 +168,8 @@
     group-vars:
       subnode:
         devstack_services:
+          br-ex-tcpdump: true
+          br-int-flows: true
           ovn-controller: true
           ovn-northd: false
           ovn-octavia: false
