--- a/zuul.d/tempest-multinode.yaml
+++ b/zuul.d/tempest-multinode.yaml
@@ -105,6 +105,10 @@
           $TEMPEST_CONFIG:
             neutron_plugin_options:
               is_igmp_snooping_enabled: True
+        post-config:
+          "/$NEUTRON_CORE_PLUGIN_CONF":
+            ovn:
+              enable_distributed_floating_ip: True
       devstack_localrc:
         Q_AGENT: ovn
         Q_ML2_PLUGIN_MECHANISM_DRIVERS: ovn,logger
