--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -68,9 +68,6 @@
         - neutron-functional
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
-        - neutron-grenade-multinode
-        - neutron-grenade-dvr-multinode
-        - neutron-grenade
 
         - openstack-tox-cover
         - legacy-neutron-dsvm-api:
@@ -296,6 +293,7 @@
       - ^setup.cfg$
       - ^tools/.*$
       - ^tox.ini$
+    voting: false
 
 - job:
     name: neutron-grenade-dvr-multinode
@@ -318,6 +316,7 @@
       - ^setup.cfg$
       - ^tools/.*$
       - ^tox.ini$
+    voting: false
 
 - job:
     name: neutron-tempest-multinode-full
@@ -407,3 +406,4 @@
       - ^setup.cfg$
       - ^tools/.*$
       - ^tox.ini$
+    voting: false
