ovn: Use newer OVS
OVS tag v2.13.0 is not compatible with current used kernel on upstream
Bionic Ubuntu kernel 4.15.0. This patch sticks to commit hash to unblock
the gate. We can either change to newer 2.13 tag once released or better
stop compiling OVS and use one packaged by Ubuntu.

Run functional/fullstack tests with selected OVN and OVS versions

Previously for functional tests OVS version was hardcoded - v2.12.0,
and OVN was installed from OVS repository.

After we merged OVN driver to Neutron tree we run both
Neutron/OVS and Neutron/OVN functional tests in one job.

This patch adds possibility to specify from which tag/branch OVS and OVN
should be checkout.

Change-Id: I83688031951b97bfe64f3aaa761ad7afc1d5ea55
Closes-Bug: #1883601
Closes-Bug: #1878160

--- a/roles/configure_functional_tests/tasks/main.yaml
+++ b/roles/configure_functional_tests/tasks/main.yaml
@@ -10,10 +10,15 @@
         PROJECT_NAME={{ project_name }}
         NEUTRON_PATH={{ neutron_dir }}
         DEVSTACK_PATH={{ devstack_dir }}
+        TOP_DIR={{ devstack_dir }}
         VENV={{ tests_venv }}
+        STACK_USER=stack
+        OVS_BRANCH={{ OVS_BRANCH }}
+        OVN_BRANCH={{ OVN_BRANCH }}
 
         source $DEVSTACK_PATH/functions
         source $NEUTRON_PATH/devstack/lib/ovs
+        source $NEUTRON_PATH/devstack/lib/ovn_agent
         source $NEUTRON_PATH/tools/configure_for_func_testing.sh
 
         configure_host_for_func_testing
