--- a/zuul.d/base.yaml
+++ b/zuul.d/base.yaml
@@ -18,6 +18,9 @@
       - ^neutron/locale/.*$
       - ^releasenotes/.*$
     vars:
+      OVN_BRANCH: v20.03.0
+      # TODO(jlibosva): v2.13.0 is incompatible with kernel 4.15.0, sticking to commit hash until new v2.13 tag is created.
+      OVS_BRANCH: 51e9479da62edb04a5be47a7655de75c299b9fa1
       devstack_services:
         # Ignore any default set by devstack. Emit a "disable_all_services".
         base: false
