--- a/zuul.d/tempest-singlenode.yaml
+++ b/zuul.d/tempest-singlenode.yaml
@@ -299,7 +299,8 @@
     vars:
       devstack_localrc:
         OVN_BRANCH: v20.03.0
-        OVS_BRANCH: v2.13.0
+        # TODO(jlibosva): v2.13.0 is incompatible with kernel 4.15.0, sticking to commit hash until new v2.13 tag is created
+        OVS_BRANCH: 51e9479da62edb04a5be47a7655de75c299b9fa1
 
 - job:
     name: neutron-ovn-tempest-ovs-release
@@ -308,7 +309,8 @@
     vars:
       devstack_localrc:
         OVN_BRANCH: v20.03.0
-        OVS_BRANCH: v2.13.0
+        # TODO(jlibosva): v2.13.0 is incompatible with kernel 4.15.0, sticking to commit hash until new v2.13 tag is created
+        OVS_BRANCH: 51e9479da62edb04a5be47a7655de75c299b9fa1
 
 - job:
     name: neutron-ovn-tempest-ovs-master-fedora
